aml-syntax/src/snapshots/aml_syntax__expressions__test__incomplete_binary_expression.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Binary:
  original: a +
  lhs:
    Ident:
      value: a
      location:
        start_byte: 0
        end_byte: 1
  rhs:
    Error:
      original: +
      location:
        start_byte: 2
        end_byte: 3
      token: Eof
  op: Plus
  location:
    start_byte: 0
    end_byte: 3
