aml-syntax/src/snapshots/aml_syntax__expressions__test__incomplete_dot_lookup.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Binary:
  original: obj.
  lhs:
    Ident:
      value: obj
      location:
        start_byte: 0
        end_byte: 3
  rhs:
    Error:
      original: "."
      location:
        start_byte: 3
        end_byte: 4
      token: Eof
  op: Dot
  location:
    start_byte: 0
    end_byte: 4
