aml-syntax/src/snapshots/aml_syntax__expressions__test__list.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
List:
  items:
    - Primitive:
        Int: 1
    - Primitive:
        Int: 2
    - Ident:
        location:
          start_byte: 7
          end_byte: 8
        value: a
    - Primitive:
        Int: 4
