aml-syntax/src/snapshots/aml_syntax__expressions__test__missing_left_operand.snap
---
source: aml-syntax/src/expressions.rs
expression: parse(input)
---
Error:
  original: "*"
  location:
    start_byte: 0
    end_byte: 1
  token:
    Operator: Mul
